{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 364,
  "lineage": "5dbeb333-8997-cab3-3120-812d2e5c0946",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae5d9f9ff8a5fff9",
            "association_id": "eipassoc-09887c5131f4f426f",
            "domain": "vpc",
            "id": "eipalloc-0ae5d9f9ff8a5fff9",
            "instance": "i-0efd6282f65fd25b9",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-039eb241c154f8ae3",
            "private_dns": "ip-10-0-0-32.eu-central-1.compute.internal",
            "private_ip": "10.0.0.32",
            "public_dns": "ec2-18-158-114-14.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.158.114.14",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2_public",
            "aws_kms_key.my-kms-key",
            "aws_security_group.RDP-security-group",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-014c4bcfe3cae98f0",
            "arn": "arn:aws:ec2:eu-central-1:027619007323:instance/i-0efd6282f65fd25b9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "xvdf",
                "encrypted": true,
                "iops": 600,
                "kms_key_id": "arn:aws:kms:eu-central-1:027619007323:key/081373b4-6db8-411f-92f8-7e964d213d99",
                "throughput": 0,
                "volume_id": "vol-09ed3a2d15ca0dd26",
                "volume_size": 200,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0efd6282f65fd25b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "LL-TEST",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-039eb241c154f8ae3",
            "private_dns": "ip-10-0-0-32.eu-central-1.compute.internal",
            "private_ip": "10.0.0.32",
            "public_dns": "ec2-18-193-117-18.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.193.117.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:eu-central-1:027619007323:key/081373b4-6db8-411f-92f8-7e964d213d99",
                "throughput": 0,
                "volume_id": "vol-081479928d4b87e5b",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0813b8c52fff01cd0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e68d69b13bdc8eb",
            "tags": {
              "Name": "EC2-PUBLIC"
            },
            "tags_all": {
              "Name": "EC2-PUBLIC"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0813b8c52fff01cd0"
            ]
          },
          "dependencies": [
            "aws_kms_key.my-kms-key",
            "aws_security_group.RDP-security-group",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:027619007323:internet-gateway/igw-0b606b4bed6b09efe",
            "id": "igw-0b606b4bed6b09efe",
            "owner_id": "027619007323",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-009cafdde76673244"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:027619007323:route-table/rtb-0584f628070a81ec6",
            "id": "rtb-0584f628070a81ec6",
            "owner_id": "027619007323",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b606b4bed6b09efe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-009cafdde76673244"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0b793f3588571be",
            "route_table_id": "rtb-0584f628070a81ec6",
            "subnet_id": "subnet-02e68d69b13bdc8eb"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDP-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:027619007323:security-group/sg-0813b8c52fff01cd0",
            "description": "Enable RDP access on Port 3389",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0813b8c52fff01cd0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDP Access",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "Allow RDP",
            "name_prefix": "",
            "owner_id": "027619007323",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDP Security Group"
            },
            "tags_all": {
              "Name": "RDP Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-009cafdde76673244"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:027619007323:subnet/subnet-0f7fbd2bac3c0ca9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7fbd2bac3c0ca9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "027619007323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-009cafdde76673244"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:027619007323:subnet/subnet-02e68d69b13bdc8eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e68d69b13bdc8eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "027619007323",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-009cafdde76673244"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:027619007323:vpc/vpc-009cafdde76673244",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0897781eec16ae704",
            "default_route_table_id": "rtb-03cb05c45abc2c059",
            "default_security_group_id": "sg-02ec2ea7cf4db8809",
            "dhcp_options_id": "dopt-5fc55635",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-009cafdde76673244",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03cb05c45abc2c059",
            "owner_id": "027619007323",
            "tags": {
              "Name": "Test_VPC"
            },
            "tags_all": {
              "Name": "Test_VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}